@startuml Iterator

class Serie {
    - nom: String
    - listeEpisode: List<Episode>
    + ajouter(episode: Episode)
    + getNom(): String
    + toString(): String
}

class Episode {
    + lire()
    + getNom(): String
    + toString(): String
}

class IteratorEpisode {
    - indexIterator: int
    - listeEpisode: List<Episode>
}

interface Iterator<Episode> {
    + next(): Episode
    + hasNext(): boolean
}

interface Iterable<Episode> {
    + iterator(): Iterator<Episode>
}

Serie..|>Iterable

IteratorEpisode..|>Iterator

@enduml